[tool.poetry]
name = "vercel-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
ediblepickle = "^1.1.3"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
ariadne = "^0.19.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
